<resources>
  <string name="login_btn">QQ登录</string>
  <string name="logout_btn">退出</string>
  <string name="app_name">吃货基地</string>

  <string name="btn_register">注册</string>
  <string name="btn_login">登录</string>
  <string name="hint_username">用户名</string>
  <string name="hint_password">密码</string>
  <string name="hint_repassword">重复密码</string>
  <string name="hint_email">邮箱</string>

  <string name="register_error">注册失败.</string>
  <string name="register_exist">用户名已存在</string>

  <string name="user_invalid">用户名或密码错误.</string>
  <string name="net_error">网络异常</string>
  <string name="password_error">两次密码不一致</string>

  <string name="product_list">商品列表</string>
  <string name="community">商品列表</string>
  <string name="sort">商品列表</string>

  <string name="action_refresh">刷新</string>
  <string name="action_logout">退出登录</string>
  <string name="action_settings">设置</string>
  <string name="action_qr_code">QR Code</string>
  <string name="action_about">关于</string>

  <string name="message_about">菜谱</string>

  <string name="product_id">宝贝编号</string>
  <string name="product_name">宝贝名</string>
  <string name="product_price">宝贝价格</string>
  <string name="product_remark">宝贝评论</string>
  <declare-styleable name="CircleImageView"><attr format="dimension" name="border_width"/><attr format="color" name="border_color"/><attr format="boolean" name="border_overlay"/></declare-styleable>

<!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">空</string>
</resources>
