<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/holo_blue_dark"
              android:orientation="vertical"
              tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_blue_dark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/height_margin_top">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgLogoView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"/>
            <Button
                android:text="头像设置"
                android:layout_weight="1"
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_margin_top"
            android:hint="@string/hint_username"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_margin_top"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/txtRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_margin_top"
            android:hint="@string/hint_repassword"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_margin_top"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>

        <Button
            android:layout_gravity="center"
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/height_margin_top"
            android:background="@android:color/darker_gray"
            android:text="@string/btn_register"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvProtocol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_margin_top"
            android:textSize="14sp"/>
    </LinearLayout>

</LinearLayout>
